--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@auth0/angular-jwt": "^2.0.0",
     "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.11.0",
     "@ionic-native/device": "^4.16.0",
@@ -30,13 +31,13 @@
     "cordova-android": "7.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.3",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-networkinterface": "^2.0.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-stripe": "^1.5.3",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.4.0",
+    "cordova-sqlite-storage": "^2.5.1",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionicons": "3.0.0",
@@ -56,7 +57,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-stripe": {},
       "cordova-plugin-networkinterface": {}
